--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,188 @@
-.App {
-  text-align: center;
+@use "../src/partials/fonts";
+@use "../src/partials/mixins" as *;
+@use "../src/partials/variables" as *;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page {
+  height: 100vh;
+  // width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: $Eggshell;
+
+  font-family: "Poppins", sans-serif;
+
+  &__header {
+    text-align: center;
+    font-size: 2rem;
+    font-family: "Pacifico", cursive;
+    color: $Terra-Cotta;
+    padding: 1rem;
+  }
+
+  // &__search {
+  //   background-color: #4db33d;
+  //   height: 38px;
+  //   width: 60px;
+  //   border: none;
+  //   color: white;
+  //   box-shadow: 0px 3px 2px #439e34;
+  //   cursor: pointer;
+  //   padding: 0;
+  // }
+
+  // &__inp {
+  //   position: relative;
+  // margin: auto;
+  // width: 100%;
+  // max-width: 280px;
+  // border-radius: 3px;
+  // overflow: hidden;
+  // }
+
+  // &__label {
+
+  // }
+
+  &__button {
+    position: relative;
+    background-color: #4caf50;
+    border: none;
+    font-size: 1rem;
+    padding: 4px;
+    color: #ffffff;
+    text-align: center;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-top: 10px;
+
+    &::after {
+      content: "";
+      background: #f1f1f1;
+      display: block;
+      position: absolute;
+      padding-top: 300%;
+      padding-left: 350%;
+      margin-left: -20px !important;
+      margin-top: -120%;
+      opacity: 0;
+      transition: all 0.8s;
+      border-radius: 10px;
+    }
+
+    &:active::after {
+      padding: 0;
+      margin: 0;
+      opacity: 1;
+      transition: 0s;
+      border-radius: 10px;
+    }
+  }
+
+  &__displayResults {
+    width: 300px;
+    padding: 20px;
+  }
+
+  &__word {
+    font-size: 2rem;
+    text-decoration: underline;
+    padding-bottom: 20px;
+    text-align: center;
+    color: $Independence;
+  }
+
+  &__subtitle {
+    color: $Green-Sheen;
+    padding: 8px 0;
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
+// Input Field Styling
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inp {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+.inp .label {
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+  transform-origin: 0 0;
+  transform: translate3d(0, 0, 0);
+  transition: all 0.2s ease;
+  pointer-events: none;
+}
+.inp .focus-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.05);
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.inp input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 0 12px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 400;
+  background: rgba(0, 0, 0, 0.02);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+  color: #000;
+  transition: all 0.15s ease;
+}
+.inp input:hover {
+  background: rgba(0, 0, 0, 0.04);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+}
+.inp input:not(:-moz-placeholder-shown) + .label {
+  color: rgba(0, 0, 0, 0.5);
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+.inp input:not(:-ms-input-placeholder) + .label {
+  color: rgba(0, 0, 0, 0.5);
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+.inp input:not(:placeholder-shown) + .label {
+  color: rgba(0, 0, 0, 0.5);
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+.inp input:focus {
+  background: rgba(0, 0, 0, 0.05);
+  outline: none;
+  box-shadow: inset 0 -2px 0 #0077ff;
+}
+.inp input:focus + .label {
+  color: #0077ff;
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+.inp input:focus + .label + .focus-bg {
+  transform: scaleX(1);
+  transition: all 0.1s ease;
 }
