--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 }
 
 .page {
-  height: 100vh;
+  min-height: 100vh;
   // width: 100vw;
   display: flex;
   flex-direction: column;
@@ -36,19 +36,6 @@
   //   box-shadow: 0px 3px 2px #439e34;
   //   cursor: pointer;
   //   padding: 0;
-  // }
-
-  // &__inp {
-  //   position: relative;
-  // margin: auto;
-  // width: 100%;
-  // max-width: 280px;
-  // border-radius: 3px;
-  // overflow: hidden;
-  // }
-
-  // &__label {
-
   // }
 
   &__button {
@@ -105,6 +92,10 @@
   &__subtitle {
     color: $Green-Sheen;
     padding: 8px 0;
+  }
+
+  &__synonym {
+    list-style: none;
   }
 }
 
