--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // background-color: $Eggshell;
+  background-color: $Eggshell;
 
   font-family: "Poppins", sans-serif;
 
@@ -24,19 +24,13 @@
     font-size: 2rem;
     font-family: "Pacifico", cursive;
     color: $Terra-Cotta;
-    padding: 1rem;
+    padding: 0.5rem;
   }
 
-  // &__search {
-  //   background-color: #4db33d;
-  //   height: 38px;
-  //   width: 60px;
-  //   border: none;
-  //   color: white;
-  //   box-shadow: 0px 3px 2px #439e34;
-  //   cursor: pointer;
-  //   padding: 0;
-  // }
+  &__search {
+    text-align: center;
+    padding: 1rem 0;
+  }
 
   &__button {
     position: relative;
@@ -52,6 +46,7 @@
     cursor: pointer;
     border-radius: 10px;
     margin-top: 10px;
+    width: 50%;
 
     &::after {
       content: "";
@@ -140,7 +135,7 @@
   border: 0;
   font-family: inherit;
   padding: 0.5rem 0.5rem 0;
-  height: 56px;
+  height: 70px;
   font-size: 16px;
   font-weight: 400;
   background: rgba(0, 0, 0, 0.02);
