--- a/src/App.scss
+++ b/src/App.scss
@@ -11,12 +11,11 @@
 
 .page {
   min-height: 100vh;
-  // width: 100vw;
+  // min-width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: $Eggshell;
-
   font-family: "Poppins", sans-serif;
 
   &__header {
@@ -106,7 +105,7 @@
 }
 .inp .label {
   position: absolute;
-  top: -10px;
+  top: -14px;
   left: 10px;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.5);
@@ -134,8 +133,8 @@
   width: 100%;
   border: 0;
   font-family: inherit;
-  padding: 0.5rem 0.5rem 0;
-  height: 70px;
+  padding: 20px 0.5rem 0;
+  height: 60px;
   font-size: 16px;
   font-weight: 400;
   background: rgba(0, 0, 0, 0.02);
