--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -9,14 +9,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-.blue {
-  color: blue;
-}
-
-.red {
-  color: red;
-}
-
 .thes {
   min-height: 100vh;
   // min-width: 250px;
@@ -160,11 +152,13 @@
   // }
 }
 
+// RECOMMENDED WORDS
 .otherResults {
   &__notFound {
     font-size: 1.5rem;
     text-align: center;
     padding: 8px 0;
+    color: red;
   }
 
   &__notWordList {
@@ -183,14 +177,12 @@
     justify-content: center;
     width: fit-content;
     text-align: center;
-    margin: 3px;
     font-style: italic;
     font-weight: bold;
   }
 }
 
-// Input Field Styling
-
+// SEARCH FIELD STYLING
 .inp {
   position: relative;
   margin: auto;
