Create function to make synonym word a link that refreshes page and parameter back to home or / using window.location.replace instead of reload

--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -24,6 +24,10 @@
     font-family: "Pacifico", cursive;
     color: $Terra-Cotta;
     padding: 0.5rem;
+
+    &--link {
+      text-decoration: none;
+    }
   }
 
   &__search {
