Use parts of speech useStates to display synonyms of each parts of speech in the synonyms results section

--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -112,6 +112,13 @@
     text-decoration: none;
   }
 
+  &__typeOfSyn {
+    font-size: 0.9rem;
+    font-style: italic;
+    color: $Independence;
+    font-weight: bold;
+  }
+
   &__definitions {
     padding: 8px;
   }
