--- a/src/pages/ThesaurusApiOld/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiOld/ThesaurusApi.scss
@@ -9,15 +9,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-.blue {
-  color: blue;
-}
-
-.red {
-  color: red;
-  border: none;
-}
-
 .thes {
   min-height: 100vh;
   // min-width: 250px;
@@ -33,14 +24,10 @@
     font-family: "Pacifico", cursive;
     color: $Terra-Cotta;
     padding: 0.5rem;
-  }
 
-  &__header2 {
-    text-align: center;
-    font-size: 2rem;
-    font-family: "Pacifico", cursive;
-    color: #3a86ff;
-    padding: 0.5rem;
+    &--link {
+      text-decoration: none;
+    }
   }
 
   &__search {
@@ -86,9 +73,16 @@
       border-radius: 10px;
     }
   }
+}
 
-  &__displayResults {
-    padding: 0px 20px 20px;
+.displayResults {
+  padding: 0px 20px 20px;
+
+  &__word {
+    font-size: 2rem;
+    text-decoration: underline;
+    text-align: center;
+    color: $Independence;
   }
 
   &__synonyms {
@@ -96,11 +90,15 @@
     flex-wrap: wrap;
     // justify-content: space-evenly;
     margin: 8px;
-    color: $Independence;
+  }
+
+  &__link {
+    text-decoration: none;
   }
 
   &__synonym {
     font-size: 1rem;
+    color: $Independence;
     list-style: none;
     padding: 4px 8px;
     border: 1px solid $Independence;
@@ -111,17 +109,26 @@
     text-align: center;
     margin: 3px;
     background-color: whitesmoke;
+    text-decoration: none;
   }
 
-  &__otherResults {
+  &__typeOfSyn {
+    font-size: 0.9rem;
+    font-style: italic;
+    color: $Independence;
+    font-weight: bold;
+  }
+
+  &__definitions {
     padding: 8px;
   }
 
-  &__word {
-    font-size: 2rem;
-    text-decoration: underline;
+  &__header2 {
     text-align: center;
-    color: $Independence;
+    font-size: 2rem;
+    font-family: "Pacifico", cursive;
+    color: #3a86ff;
+    padding: 0.5rem;
   }
 
   // &__typeResults {
@@ -150,41 +157,43 @@
     padding: 4px 8px;
   }
 
-  &__example {
-    font-size: 0.9375rem;
-    color: #8d99ae;
-  }
+  // &__example {
+  //   font-size: 0.9375rem;
+  //   color: #8d99ae;
+  // }
+}
 
+// RECOMMENDED WORDS
+.otherResults {
   &__notFound {
     font-size: 1.5rem;
     text-align: center;
     padding: 8px 0;
+    color: red;
   }
 
   &__notWordList {
     display: flex;
     flex-wrap: wrap;
     // justify-content: space-evenly;
-    margin: 8px;
-    color: $Independence;
+    padding: 10px 20px;
   }
 
   &__notWord {
     font-size: 1.2rem;
+    color: $Independence;
     list-style: none;
     padding: 4px 8px;
     align-items: center;
     justify-content: center;
     width: fit-content;
     text-align: center;
-    margin: 3px;
     font-style: italic;
     font-weight: bold;
   }
 }
 
-// Input Field Styling
-
+// SEARCH FIELD STYLING
 .inp {
   position: relative;
   margin: auto;
