--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -11,7 +11,7 @@
 
 .thes {
   min-height: 100vh;
-  // min-width: 250px;
+  // max-width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -193,7 +193,7 @@
   width: 100%;
   border: 0;
   font-family: inherit;
-  padding: 20px 0.5rem 0;
+  padding: 20px 1rem 0;
   height: 60px;
   font-size: 21px;
   font-weight: 400;
