--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -11,7 +11,7 @@
 
 .thes {
   min-height: 100vh;
-  // max-width: 350px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,6 +33,7 @@
   &__search {
     text-align: center;
     padding: 1rem 0;
+    width: 100%;
   }
 }
 
@@ -134,6 +135,8 @@
     text-align: center;
     padding: 8px 0;
     color: red;
+    font-style: italic;
+    font-weight: bold;
   }
 
   &__notWordList {
@@ -143,17 +146,23 @@
     padding: 10px 20px;
   }
 
+  &__link {
+    text-decoration: none;
+  }
+
   &__notWord {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: $Independence;
     list-style: none;
     padding: 4px 8px;
+    border: 1px solid $Independence;
+    border-radius: 20px;
     align-items: center;
     justify-content: center;
     width: fit-content;
     text-align: center;
-    font-style: italic;
-    font-weight: bold;
+    margin: 3px;
+    background-color: whitesmoke;
   }
 }
 
@@ -198,7 +207,7 @@
   font-family: inherit;
   padding: 20px 1rem 0;
   height: 60px;
-  font-size: 21px;
+  font-size: 1.25rem;
   font-weight: 400;
   background: rgba(0, 0, 0, 0.02);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
