--- a/src/pages/ThesaurusApiNew/ThesaurusApi.scss
+++ b/src/pages/ThesaurusApiNew/ThesaurusApi.scss
@@ -48,6 +48,7 @@
     color: #457b9d;
     color: #014f86;
     margin: 0 0 0.5rem;
+    font-weight: 600;
   }
 
   &__synonyms {
@@ -207,7 +208,7 @@
   font-family: inherit;
   padding: 20px 1rem 0;
   height: 60px;
-  font-size: 1.25rem;
+  font-size: 1.1875rem;
   font-weight: 400;
   background: rgba(0, 0, 0, 0.02);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
