--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,13 +1,15 @@
 // Variables
 
 // Colors
-// https://coolors.co/b8d8d8-7a9e9f-4f6367-eef5db-fe5f55
-
 $Eggshell: #f4f1de;
 $Terra-Cotta: #e07a5f;
+$Baby-Blue: #3a86ff;
 $Independence: #3d405b;
 $Green-Sheen: #81b29a;
 $Deep-Champagne: #f2cc8f;
+$Crimson-Red: #d90429;
+$White-Smoke: whitesmoke;
+$Dark-Blue: #014f86;
 
 //Responsive Breakpoints
 $tablet-width: 768px;
