--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,8 +1,10 @@
 // Variables
 
 // Colors
+$White: white;
 $Eggshell: #f4f1de;
 $Terra-Cotta: #e07a5f;
+$Light-Cotta: #e6967f;
 $Baby-Blue: #3a86ff;
 $Independence: #3d405b;
 $Green-Sheen: #81b29a;
